tests/negative/resource_signed_carrier_overflow.ora
resource SmallDebt = i8;

contract ResourceSignedCarrierOverflow {
    storage var debts: map<address, Resource<SmallDebt>>;

    pub fn bad(to: address) {
        @create(debts[to], 128);
    }
}
